--- a/registration.html
+++ b/registration.html
@@ -19,14 +19,14 @@
                 <div class="formrow">
                     <lable for="fname" class="formlable">First Name:</lable>
                     <div class="forminp">
-                        <input type="text" id="fname" placeholder="Sumit" onclick="removeerror('fnameerror')">
+                        <input type="text" id="fname" placeholder="First Name" onclick="removeerror('fnameerror')">
                         <div class="Error" id="fnameerror" id="Error">First Name required</div>
                     </div>
                 </div>
                 <div class="formrow">
                     <lable for="lname" class="formlable">Last Name:</lable>
                     <div class="forminp">
-                        <input type="text" id="lname" placeholder="Gadade" onclick="removeerror('lnameerror')">
+                        <input type="text" id="lname" placeholder="Last Name" onclick="removeerror('lnameerror')">
                         <div class="Error" id="lnameerror">Last Name required</div>
                     </div>
                 </div>
