--- a/dashboard.html
+++ b/dashboard.html
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="pro_row">
-                        <lable for="fname" class="formlable">Gender</lable>
+                        <lable for="fname" class="formlable">Gender:</lable>
                         <div class="formrdio">
                             <input type="radio" name="gender" id="male" disabled>Male
                             <input type="radio" name="gender" id="female" disabled>Female
@@ -134,13 +134,13 @@
                         </div>
                     </div>
                     <div class="pro_row ">
-                        <lable for="fname" class="formlable ">Email</lable>
+                        <lable for="fname" class="formlable ">Email:</lable>
                         <div class="forminp">
                             <input type="text" id="email" readonly>
                         </div>
                     </div>
                     <div class="pro_row">
-                        <lable for="fname" class="formlable">Address</lable>
+                        <lable for="fname" class="formlable">Address:</lable>
                         <div class="forminp">
                             <input type="text" id="addr" readonly>
                         </div>
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <div class="formrow">
-                            <lable for="fname" class="formlable">Gender</lable>
+                            <lable for="fname" class="formlable">Gender:</lable>
                             <div class="formrdio">
                                 <input type="radio" name="ugender" id="umale" value="male">Male
                                 <input type="radio" name="ugender" id="ufemale" value="female">Female
@@ -176,9 +176,9 @@
                             </div>
                         </div>
                         <div class="formrow">
-                            <lable for="file" id="uprofileImage" class=" formlable ">Profile Photo:</lable>
+                            <lable for="file" id="uprofileImage" class=" formlable ">Profile Image:</lable>
                             <div class=" forminp ">
-                                <input type="file" id="uprofileimage">
+                                <input type="file" id="uprofileimage" onchange="getImageData();">
                             </div>
                         </div>
                         <div class="formrow ">
