--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,7 @@
                 <button class="button" onclick="showprofile()">Profile</button>
                 <button class="button" onclick="showaddtodo()">Add New Task</button>
                 <button class="button" onclick="deletetodo()">Delete checked task</button>
+                <button class="button" onclick="sort()">Sort</button>
                 <h1>Search By-</h1>
                 <div class="searchinp">
                     <input type="radio" name="search" id="search" value="searchbyname">
