--- a/dashboard.html
+++ b/dashboard.html
@@ -142,9 +142,9 @@
                             <div class="formrow">
                                 <lable for="catagory" class="formlable">Catagory:</lable>
                                 <div class="formrdio">
-                                    <input type="checkbox" name="catagory" id="ework" value="work" onclick="removeerror('ecatagoryerror')">
+                                    <input type="checkbox" name="ecatagory" id="ework" value="work" onclick="removeerror('ecatagoryerror')">
                                     <label for="work">Work</label>
-                                    <input type="checkbox" name="catagory" id="epersonal" value="personal" onclick="removeerror('ecatagoryerror')">
+                                    <input type="checkbox" name="ecatagory" id="epersonal" value="personal" onclick="removeerror('ecatagoryerror')">
                                     <label for="personal">Personal</label>
                                     <div class="Error" id="ecatagoryerror">required</div>
                                 </div>
